[project]
name = "hypergen"
version = "0.1.0"
description = "Optimized inference and fine-tuning framework for diffusion (image & video) models."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Julian Schoen", email = "j.schoen@mail.com" }
]
requires-python = ">=3.10"
keywords = ["diffusion", "stable-diffusion", "lora", "flux", "sdxl", "image-generation", "ai", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ntegrals/hypergen"
Repository = "https://github.com/ntegrals/hypergen"
Issues = "https://github.com/ntegrals/hypergen/issues"
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "peft>=0.8.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
hypergen = "hypergen.cli.main:cli_entrypoint"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
flash = ["flash-attn>=2.5.0"]
xformers = ["xformers>=0.0.25"]
deepspeed = ["deepspeed>=0.14.0"]
video = ["av>=12.0.0", "opencv-python>=4.9.0"]
all = [
    "hypergen[dev,flash,xformers,deepspeed,video]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
